删除旧版项目

--- a/gateway2/build.gradle
+++ b/gateway2/build.gradle
@@ -22,13 +22,13 @@ ext {
 }
 
 dependencies {
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-alibaba-nacos-config'
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-alibaba-sentinel'
+//	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-alibaba-nacos-config'
+//	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-alibaba-sentinel'
 	implementation group: 'com.nepxion', name: 'discovery-plugin-starter-nacos'
 	implementation group: 'com.nepxion', name: 'discovery-plugin-config-center-starter-nacos'
 	implementation group: 'com.nepxion', name: 'discovery-plugin-strategy-starter-gateway'
-	implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
-	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
