--- a/gateway2/src/main/resources/application.yaml
+++ b/gateway2/src/main/resources/application.yaml
@@ -23,6 +23,9 @@ spring:
   zipkin:
     base-url: http://localhost:9411
 management:
+  endpoint:
+    gateway:
+      enabled: true
   endpoints:
     web:
       exposure:
