--- a/sa/src/main/resources/application.yaml
+++ b/sa/src/main/resources/application.yaml
@@ -20,6 +20,13 @@ spring:
             file: "classpath: flowrule.json"
             data-type: json
             rule-type: flow
+#        ds2:
+#          nacos:
+#            server-addr: localhost:8848
+#            dataId: sentinel_flowrule.json
+#            groupId: DEFAULT_GROUP
+#            data-type: json
+#            rule-type: flow
   sleuth:
   zipkin:
     base-url: http://localhost:9411
