--- a/gateway2/src/main/resources/bootstrap.properties
+++ b/gateway2/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.application.name=gateway
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.application.config.format=json
 nacos.server-addr=localhost:8848
