--- a/sb/src/main/resources/bootstrap.properties
+++ b/sb/src/main/resources/bootstrap.properties
@@ -1,5 +1,6 @@
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.application.name=nacos-consumer
+spring.application.config.format=json
 nacos.server-addr=127.0.0.1:8848
 info.version=1.0
 
