--- a/gateway2/build.gradle
+++ b/gateway2/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.0.6.RELEASE'
+	id 'org.springframework.boot' version '2.0.7.RELEASE'
 	id 'java'
 	id 'idea'
 }
@@ -11,24 +11,21 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
-	mavenCentral()
+    maven( {url 'https://maven.aliyun.com/repository/central'})
 	maven { url 'https://repo.spring.io/milestone' }
+	mavenCentral()
 }
 
 ext {
 	set('springCloudVersion', 'Finchley.SR2')
-	set('discoveryPluginVersion', '4.8.2.6')
+	set('discoveryPluginVersion', '4.8.3')
 	set('springCloudAlibabaVersion', '0.2.1.RELEASE')
 }
 
 dependencies {
-//	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-alibaba-nacos-config'
-//	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-alibaba-sentinel'
-	implementation group: 'com.nepxion', name: 'discovery-plugin-starter-nacos'
-	implementation group: 'com.nepxion', name: 'discovery-plugin-config-center-starter-nacos'
-	implementation group: 'com.nepxion', name: 'discovery-plugin-strategy-starter-gateway'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'com.nepxion:discovery-plugin-starter-nacos'
+	implementation 'com.nepxion:discovery-plugin-config-center-starter-nacos'
+	implementation 'com.nepxion:discovery-plugin-strategy-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
