--- a/pay/build.gradle
+++ b/pay/build.gradle
@@ -1,46 +1,51 @@
-buildscript {
-	ext {
-		springBootVersion = '1.5.9.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+plugins {
+	id 'org.springframework.boot' version '2.1.3.RELEASE'
+	id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.yan'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
+sourceCompatibility = '1.8'
+configurations.all {
+	// check for updates every build
+	resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
 repositories {
 	mavenCentral()
+//	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
 }
 
-
 ext {
-	springCloudVersion = 'Edgware.SR1'
+	set('springCloudVersion', 'Greenwich.SR1')
+	set('discoveryPluginVersion', '4.8.3')
+	set('springCloudAlibabaVersion', '0.2.2.BUILD-SNAPSHOT')
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-aop')
-	compile('org.springframework.cloud:spring-cloud-starter-eureka')
-	compile('org.springframework.cloud:spring-cloud-starter-feign')
-	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
-	compile('io.micrometer:micrometer-registry-atlas:1.0.1')
-	compile('io.micrometer:micrometer-spring-legacy:1.0.1')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+//	implementation 'com.nepxion:discovery-plugin-starter-nacos'
+//	implementation 'com.nepxion:discovery-plugin-config-center-starter-nacos'
+//	implementation 'com.nepxion:discovery-plugin-strategy-starter-service'
+	implementation 'org.springframework.cloud:spring-cloud-starter-alibaba-sentinel'
+	implementation 'org.springframework.cloud:spring-cloud-starter-alibaba-nacos-config'
+	implementation 'org.springframework.cloud:spring-cloud-alibaba-sentinel-datasource'
+	implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
+	resolutionStrategy {
+		cacheChangingModulesFor 0, 'seconds'
+	}
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-alibaba-dependencies:${springCloudAlibabaVersion}"
+		mavenBom "com.nepxion:discovery:${discoveryPluginVersion}"
 	}
 }
