--- a/pay/src/main/resources/application.yaml
+++ b/pay/src/main/resources/application.yaml
@@ -1,23 +1,32 @@
 server:
-  port: 8876
-
+  port: 8083
 spring:
-  application:
-    name: service-pay
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+#        metadata:
+#          version: 1.0
+#          group: DEFAULT_GROUP
+    sentinel:
+      transport:
+        port: 8919
+        dashboard: localhost:8090
+      datasource:
+        ds1:
+          nacos:
+            server-addr: localhost:8848
+            dataId: sentinel_flowrule.json
+            groupId: DEFAULT_GROUP
+            data-type: json
+            rule-type: flow
+  sleuth:
+  zipkin:
+    base-url: http://localhost:9411
+    sender:
+      type: web
 management:
-  security:
-    enabled: false
-  metrics:
-    export:
-      atlas:
-        enabled: true
-        step: PT10S
-        readTimeout: PT30S
-        batchSize: 20000
-        uri: http://localhost:7101/api/v1/publish
+  endpoints:
+    web:
+      exposure:
+        include: "*"
