--- a/sa/src/main/resources/application.yaml
+++ b/sa/src/main/resources/application.yaml
@@ -15,23 +15,23 @@ spring:
         port: 8919
         dashboard: localhost:8090
       datasource:
-        ds1:
-          file:
-            file: "classpath: flowrule.json"
-            data-type: json
-            rule-type: flow
-#        ds2:
-#          nacos:
-#            server-addr: localhost:8848
-#            dataId: sentinel_flowrule.json
-#            groupId: DEFAULT_GROUP
+#        ds1:
+#          file:
+#            file: "classpath: flowrule.json"
 #            data-type: json
 #            rule-type: flow
-  sleuth:
-  zipkin:
-    base-url: http://localhost:9411
-    sender:
-      type: web
+        ds1:
+          nacos:
+            server-addr: localhost:8848
+            dataId: sentinel_flowrule.json
+            groupId: DEFAULT_GROUP
+            data-type: json
+            rule-type: flow
+#  sleuth:
+#  zipkin:
+#    base-url: http://localhost:9411
+#    sender:
+#      type: web
 management:
   endpoints:
     web:
