UserDetails Use JDBC

--- a/auth2/build.gradle
+++ b/auth2/build.gradle
@@ -21,11 +21,15 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.alibaba:druid-spring-boot-starter:1.1.14'
+	implementation 'mysql:mysql-connector-java:5.1.24'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'com.nepxion:discovery-plugin-starter-nacos'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-security'
 	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
 	implementation 'org.springframework.security:spring-security-jwt'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
