--- a/auth2/src/main/resources/application.properties
+++ b/auth2/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8080
 spring.application.name=service-OAuth2
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+spring.datasource.url=jdbc:mysql://localhost:3306/cloud
+spring.datasource.username=cloud_dev
+spring.datasource.password=123456
+
