--- a/sa/build.gradle
+++ b/sa/build.gradle
@@ -22,6 +22,8 @@ repositories {
 
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.6'
+    implementation 'com.alibaba:druid-spring-boot-starter:1.1.14'
+    implementation 'mysql:mysql-connector-java:5.1.24'
     implementation 'com.alibaba.csp:sentinel-datasource-extension'
     implementation 'com.alibaba.csp:sentinel-datasource-nacos'
     implementation 'com.nepxion:discovery-plugin-starter-nacos'
@@ -31,10 +33,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-alibaba-nacos-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-security'
     implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation 'org.springframework.security:spring-security-jwt'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.alibaba:druid-spring-boot-starter:1.1.14'
-    implementation ("mysql:mysql-connector-java:5.1.24")
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
