--- a/sa/src/main/resources/application.yaml
+++ b/sa/src/main/resources/application.yaml
@@ -6,12 +6,13 @@ spring:
     name: nacos-producer
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/cloud
+      url: jdbc:mysql://localhost:3306/cloud?useUnicode=true&characterEncoding=UTF-8
       username:  cloud_dev
       password:  123456
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
   cloud:
     nacos:
@@ -32,11 +33,6 @@ spring:
             groupId: DEFAULT_GROUP
             data-type: json
             rule-type: flow
-  sleuth:
-  zipkin:
-    base-url: http://localhost:9411
-    sender:
-      type: web
 management:
   endpoints:
     web:
